hpl/parser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    TP_CHAR
    TP_STRING
    THEN
    CHAR
    DOT
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> command_sequence
Rule 2     term -> term measure_unit
Rule 3     measure_unit -> MEASUREMENT_UNIT DIVIDE MEASUREMENT_UNIT
Rule 4     measure_unit -> MEASUREMENT_UNIT
Rule 5     expression -> term
Rule 6     command_sequence -> command
Rule 7     command_sequence -> command command_sequence
Rule 8     command -> expression
Rule 9     command -> control_operations
Rule 10    command -> attribution_statement
Rule 11    command -> IDENTIFIER
Rule 12    command -> array
Rule 13    expression -> load_statement
Rule 14    expression -> expression TIMES term
Rule 15    expression -> expression DIVIDE term
Rule 16    expression -> expression PLUS term
Rule 17    expression -> expression MINUS term
Rule 18    expression -> expression AND term
Rule 19    expression -> expression OR term
Rule 20    expression -> expression LESS_EQUAL expression
Rule 21    expression -> expression GREAT_EQUAL expression
Rule 22    expression -> expression NOT_EQUAL expression
Rule 23    expression -> expression EQUAL expression
Rule 24    term -> INTEGER
Rule 25    term -> FLOAT
Rule 26    term -> LPAREN expression RPAREN
Rule 27    term -> BOOL
Rule 28    term -> IDENTIFIER
Rule 29    term -> array
Rule 30    load_statement -> LOAD STRING FROM STRING WHERE expression
Rule 31    if_statement -> IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET else_statement
Rule 32    if_statement -> IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET empty
Rule 33    else_statement -> ELSE LBRACKET command_sequence RBRACKET
Rule 34    else_statement -> ELSE if_statement
Rule 35    control_operations -> if_statement
Rule 36    control_operations -> while_statement
Rule 37    while_statement -> WHILE LPAREN expression RPAREN DO LBRACKET command_sequence RBRACKET
Rule 38    array -> LSQUARE_BRACKET list_terms RSQUARE_BRACKET
Rule 39    list_terms -> list_terms DOTCOMMA term
Rule 40    list_terms -> term_array
Rule 41    term_array -> STRING
Rule 42    term_array -> expression
Rule 43    attribution_statement -> type IDENTIFIER empty
Rule 44    attribution_statement -> type IDENTIFIER ATTRIBUTION term
Rule 45    attribution_statement -> IDENTIFIER ATTRIBUTION term
Rule 46    term -> IDENTIFIER LBRACKET term RBRACKET ATTRIBUTION term
Rule 47    type -> TP_OBJECT
Rule 48    type -> TP_INTEGER
Rule 49    type -> TP_FLOAT
Rule 50    type -> TP_BOOL
Rule 51    type -> TP_ARRAY
Rule 52    empty -> <empty>

Terminals, with rules where they appear

AND                  : 18
ATTRIBUTION          : 44 45 46
BOOL                 : 27
CHAR                 : 
COMMENT              : 
DIVIDE               : 3 15
DO                   : 37
DOT                  : 
DOTCOMMA             : 39
ELSE                 : 33 34
EQUAL                : 23
FLOAT                : 25
FROM                 : 30
GREAT_EQUAL          : 21
IDENTIFIER           : 11 28 43 44 45 46
IF                   : 31 32
INTEGER              : 24
LBRACKET             : 31 32 33 37 46
LESS_EQUAL           : 20
LOAD                 : 30
LPAREN               : 26 31 32 37
LSQUARE_BRACKET      : 38
MEASUREMENT_UNIT     : 3 3 4
MINUS                : 17
NOT_EQUAL            : 22
OR                   : 19
PLUS                 : 16
RBRACKET             : 31 32 33 37 46
RPAREN               : 26 31 32 37
RSQUARE_BRACKET      : 38
STRING               : 30 30 41
THEN                 : 
TIMES                : 14
TP_ARRAY             : 51
TP_BOOL              : 50
TP_CHAR              : 
TP_FLOAT             : 49
TP_INTEGER           : 48
TP_OBJECT            : 47
TP_STRING            : 
WHERE                : 30
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

array                : 12 29
attribution_statement : 10
command              : 6 7
command_sequence     : 1 7 31 32 33 37
control_operations   : 9
else_statement       : 31
empty                : 32 43
expression           : 8 14 15 16 17 18 19 20 20 21 21 22 22 23 23 26 30 31 32 37 42
if_statement         : 34 35
list_terms           : 38 39
load_statement       : 13
measure_unit         : 2
program              : 0
term                 : 2 5 14 15 16 17 18 19 39 44 45 46 46
term_array           : 40
type                 : 43 44
while_statement      : 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . command_sequence
    (6) command_sequence -> . command
    (7) command_sequence -> . command command_sequence
    (8) command -> . expression
    (9) command -> . control_operations
    (10) command -> . attribution_statement
    (11) command -> . IDENTIFIER
    (12) command -> . array
    (5) expression -> . term
    (13) expression -> . load_statement
    (14) expression -> . expression TIMES term
    (15) expression -> . expression DIVIDE term
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression AND term
    (19) expression -> . expression OR term
    (20) expression -> . expression LESS_EQUAL expression
    (21) expression -> . expression GREAT_EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (23) expression -> . expression EQUAL expression
    (35) control_operations -> . if_statement
    (36) control_operations -> . while_statement
    (43) attribution_statement -> . type IDENTIFIER empty
    (44) attribution_statement -> . type IDENTIFIER ATTRIBUTION term
    (45) attribution_statement -> . IDENTIFIER ATTRIBUTION term
    (38) array -> . LSQUARE_BRACKET list_terms RSQUARE_BRACKET
    (2) term -> . term measure_unit
    (24) term -> . INTEGER
    (25) term -> . FLOAT
    (26) term -> . LPAREN expression RPAREN
    (27) term -> . BOOL
    (28) term -> . IDENTIFIER
    (29) term -> . array
    (46) term -> . IDENTIFIER LBRACKET term RBRACKET ATTRIBUTION term
    (30) load_statement -> . LOAD STRING FROM STRING WHERE expression
    (31) if_statement -> . IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET else_statement
    (32) if_statement -> . IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET empty
    (37) while_statement -> . WHILE LPAREN expression RPAREN DO LBRACKET command_sequence RBRACKET
    (47) type -> . TP_OBJECT
    (48) type -> . TP_INTEGER
    (49) type -> . TP_FLOAT
    (50) type -> . TP_BOOL
    (51) type -> . TP_ARRAY

    IDENTIFIER      shift and go to state 7
    LSQUARE_BRACKET shift and go to state 14
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    LPAREN          shift and go to state 17
    BOOL            shift and go to state 18
    LOAD            shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    TP_OBJECT       shift and go to state 22
    TP_INTEGER      shift and go to state 23
    TP_FLOAT        shift and go to state 24
    TP_BOOL         shift and go to state 25
    TP_ARRAY        shift and go to state 26

    program                        shift and go to state 1
    command_sequence               shift and go to state 2
    command                        shift and go to state 3
    expression                     shift and go to state 4
    control_operations             shift and go to state 5
    attribution_statement          shift and go to state 6
    array                          shift and go to state 8
    term                           shift and go to state 9
    load_statement                 shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    type                           shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> command_sequence .

    $end            reduce using rule 1 (program -> command_sequence .)


state 3

    (6) command_sequence -> command .
    (7) command_sequence -> command . command_sequence
    (6) command_sequence -> . command
    (7) command_sequence -> . command command_sequence
    (8) command -> . expression
    (9) command -> . control_operations
    (10) command -> . attribution_statement
    (11) command -> . IDENTIFIER
    (12) command -> . array
    (5) expression -> . term
    (13) expression -> . load_statement
    (14) expression -> . expression TIMES term
    (15) expression -> . expression DIVIDE term
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . expression AND term
    (19) expression -> . expression OR term
    (20) expression -> . expression LESS_EQUAL expression
    (21) expression -> . expression GREAT_EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (23) expression -> . expression EQUAL expression
    (35) control_operations -> . if_statement
    (36) control_operations -> . while_statement
    (43) attribution_statement -> . type IDENTIFIER empty
    (44) attribution_statement -> . type IDENTIFIER ATTRIBUTION term
    (45) attribution_statement -> . IDENTIFIER ATTRIBUTION term
    (38) array -> . LSQUARE_BRACKET list_terms RSQUARE_BRACKET
    (2) term -> . term measure_unit
    (24) term -> . INTEGER
    (25) term -> . FLOAT
    (26) term -> . LPAREN expression RPAREN
    (27) term -> . BOOL
    (28) term -> . IDENTIFIER
    (29) term -> . array
    (46) term -> . IDENTIFIER LBRACKET term RBRACKET ATTRIBUTION term
    (30) load_statement -> . LOAD STRING FROM STRING WHERE expression
    (31) if_statement -> . IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET else_statement
    (32) if_statement -> . IF LPAREN expression RPAREN LBRACKET command_sequence RBRACKET empty
    (37) while_statement -> . WHILE LPAREN expression RPAREN DO LBRACKET command_sequence RBRACKET
    (47) type -> . TP_OBJECT
    (48) type -> . TP_INTEGER
    (49) type -> . TP_FLOAT
    (50) type -> . TP_BOOL
    (51) type -> . TP_ARRAY

    $end            reduce using rule 6 (command_sequence -> command .)
    RBRACKET        reduce using rule 6 (command_sequence -> command .)
    IDENTIFIER      shift and go to state 7
    LSQUARE_BRACKET shift and go to state 14
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    LPAREN          shift and go to state 17
    BOOL            shift and go to state 18
    LOAD            shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    TP_OBJECT       shift and go to state 22
    TP_INTEGER      shift and go to state 23
    TP_FLOAT        shift and go to state 24
    TP_BOOL         shift and go to state 25
    TP_ARRAY        shift and go to state 26

    command                        shift and go to state 3
    command_sequence               shift and go to state 27
    expression                     shift and go to state 4
    control_operations             shift and go to state 5
    attribution_statement          shift and go to state 6
    array                          shift and go to state 8
    term                           shift and go to state 9
    load_statement                 shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    type                           shift and go to state 13

state 4

    (8) command -> expression .
    (14) expression -> expression . TIMES term
    (15) expression -> expression . DIVIDE term
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (18) expression -> expression . AND term
    (19) expression -> expression . OR term
    (20) expression -> expression . LESS_EQUAL expression
    (21) expression -> expression . GREAT_EQUAL expression
    (22) expression -> expression . NOT_EQUAL expression
    (23) expression -> expression . EQUAL expression

    IDENTIFIER      reduce using rule 8 (command -> expression .)
    LSQUARE_BRACKET reduce using rule 8 (command -> expression .)
    INTEGER         reduce using rule 8 (command -> expression .)
    FLOAT           reduce using rule 8 (command -> expression .)
    LPAREN          reduce using rule 8 (command -> expression .)
    BOOL            reduce using rule 8 (command -> expression .)
    LOAD            reduce using rule 8 (command -> expression .)
    IF              reduce using rule 8 (command -> expression .)
    WHILE           reduce using rule 8 (command -> expression .)
    TP_OBJECT       reduce using rule 8 (command -> expression .)
    TP_INTEGER      reduce using rule 8 (command -> expression .)
    TP_FLOAT        reduce using rule 8 (command -> expression .)
    TP_BOOL         reduce using rule 8 (command -> expression .)
    TP_ARRAY        reduce using rule 8 (command -> expression .)
    $end            reduce using rule 8 (command -> expression .)
    RBRACKET        reduce using rule 8 (command -> expression .)
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33
    LESS_EQUAL      shift and go to state 34
    GREAT_EQUAL     shift and go to state 35
    NOT_EQUAL       shift and go to state 36
    EQUAL           shift and go to state 37


state 5

    (9) command -> control_operations .

    IDENTIFIER      reduce using rule 9 (command -> control_operations .)
    LSQUARE_BRACKET reduce using rule 9 (command -> control_operations .)
    INTEGER         reduce using rule 9 (command -> control_operations .)
    FLOAT           reduce using rule 9 (command -> control_operations .)
    LPAREN          reduce using rule 9 (command -> control_operations .)
    BOOL            reduce using rule 9 (command -> control_operations .)
    LOAD            reduce using rule 9 (command -> control_operations .)
    IF              reduce using rule 9 (command -> control_operations .)
    WHILE           reduce using rule 9 (command -> control_operations .)
    TP_OBJECT       reduce using rule 9 (command -> control_operations .)
    TP_INTEGER      reduce using rule 9 (command -> control_operations .)
    TP_FLOAT        reduce using rule 9 (command -> control_operations .)
    TP_BOOL         reduce using rule 9 (command -> control_operations .)
    TP_ARRAY        reduce using rule 9 (command -> control_operations .)
    $end            reduce using rule 9 (command -> control_operations .)
    RBRACKET        reduce using rule 9 (command -> control_operations .)


state 6

    (10) command -> attribution_statement .

    IDENTIFIER      reduce using rule 10 (command -> attribution_statement .)
    LSQUARE_BRACKET reduce using rule 10 (command -> attribution_statement .)
    INTEGER         reduce using rule 10 (command -> attribution_statement .)
    FLOAT           reduce using rule 10 (command -> attribution_statement .)
    LPAREN          reduce using rule 10 (command -> attribution_statement .)
    BOOL            reduce using rule 10 (command -> attribution_statement .)
    LOAD            reduce using rule 10 (command -> attribution_statement .)
    IF              reduce using rule 10 (command -> attribution_statement .)
    WHILE           reduce using rule 10 (command -> attribution_statement .)
    TP_OBJECT       reduce using rule 10 (command -> attribution_statement .)
    TP_INTEGER      reduce using rule 10 (command -> attribution_statement .)
    TP_FLOAT        reduce using rule 10 (command -> attribution_statement .)
    TP_BOOL         reduce using rule 10 (command -> attribution_statement .)
    TP_ARRAY        reduce using rule 10 (command -> attribution_statement .)
    $end            reduce using rule 10 (command -> attribution_statement .)
    RBRACKET        reduce using rule 10 (command -> attribution_statement .)


state 7

    (11) command -> IDENTIFIER .
    (45) attribution_statement -> IDENTIFIER . ATTRIBUTION term
    (28) term -> IDENTIFIER .
    (46) term -> IDENTIFIER . LBRACKET term RBRACKET ATTRIBUTION term

  ! reduce/reduce conflict for IDENTIFIER resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for LSQUARE_BRACKET resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for INTEGER resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for FLOAT resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for LPAREN resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for BOOL resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for LOAD resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for IF resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for WHILE resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for TP_OBJECT resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for TP_INTEGER resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for TP_FLOAT resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for TP_BOOL resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for TP_ARRAY resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for $end resolved using rule 11 (command -> IDENTIFIER .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 11 (command -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 11 (command -> IDENTIFIER .)
    LSQUARE_BRACKET reduce using rule 11 (command -> IDENTIFIER .)
    INTEGER         reduce using rule 11 (command -> IDENTIFIER .)
    FLOAT           reduce using rule 11 (command -> IDENTIFIER .)
    LPAREN          reduce using rule 11 (command -> IDENTIFIER .)
    BOOL            reduce using rule 11 (command -> IDENTIFIER .)
    LOAD            reduce using rule 11 (command -> IDENTIFIER .)
    IF              reduce using rule 11 (command -> IDENTIFIER .)
    WHILE           reduce using rule 11 (command -> IDENTIFIER .)
    TP_OBJECT       reduce using rule 11 (command -> IDENTIFIER .)
    TP_INTEGER      reduce using rule 11 (command -> IDENTIFIER .)
    TP_FLOAT        reduce using rule 11 (command -> IDENTIFIER .)
    TP_BOOL         reduce using rule 11 (command -> IDENTIFIER .)
    TP_ARRAY        reduce using rule 11 (command -> IDENTIFIER .)
    $end            reduce using rule 11 (command -> IDENTIFIER .)
    RBRACKET        reduce using rule 11 (command -> IDENTIFIER .)
    ATTRIBUTION     shift and go to state 38
    MEASUREMENT_UNIT reduce using rule 28 (term -> IDENTIFIER .)
    TIMES           reduce using rule 28 (term -> IDENTIFIER .)
    DIVIDE          reduce using rule 28 (term -> IDENTIFIER .)
    PLUS            reduce using rule 28 (term -> IDENTIFIER .)
    MINUS           reduce using rule 28 (term -> IDENTIFIER .)
    AND             reduce using rule 28 (term -> IDENTIFIER .)
    OR              reduce using rule 28 (term -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 28 (term -> IDENTIFIER .)
    GREAT_EQUAL     reduce using rule 28 (term -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 28 (term -> IDENTIFIER .)
    EQUAL           reduce using rule 28 (term -> IDENTIFIER .)
    LBRACKET        shift and go to state 39

  ! IDENTIFIER      [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! LSQUARE_BRACKET [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! INTEGER         [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! FLOAT           [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! LPAREN          [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! BOOL            [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! LOAD            [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! IF              [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! WHILE           [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! TP_OBJECT       [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! TP_INTEGER      [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! TP_FLOAT        [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! TP_BOOL         [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! TP_ARRAY        [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! $end            [ reduce using rule 28 (term -> IDENTIFIER .) ]
  ! RBRACKET        [ reduce using rule 28 (term -> IDENTIFIER .) ]


state 8

    (12) command -> array .
    (29) term -> array .

  ! reduce/reduce conflict for IDENTIFIER resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for LSQUARE_BRACKET resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for INTEGER resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for FLOAT resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for LPAREN resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for BOOL resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for LOAD resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for IF resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for WHILE resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for TP_OBJECT resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for TP_INTEGER resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for TP_FLOAT resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for TP_BOOL resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for TP_ARRAY resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for $end resolved using rule 12 (command -> array .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 12 (command -> array .)
    IDENTIFIER      reduce using rule 12 (command -> array .)
    LSQUARE_BRACKET reduce using rule 12 (command -> array .)
    INTEGER         reduce using rule 12 (command -> array .)
    FLOAT           reduce using rule 12 (command -> array .)
    LPAREN          reduce using rule 12 (command -> array .)
    BOOL            reduce using rule 12 (command -> array .)
    LOAD            reduce using rule 12 (command -> array .)
    IF              reduce using rule 12 (command -> array .)
    WHILE           reduce using rule 12 (command -> array .)
    TP_OBJECT       reduce using rule 12 (command -> array .)
    TP_INTEGER      reduce using rule 12 (command -> array .)
    TP_FLOAT        reduce using rule 12 (command -> array .)
    TP_BOOL         reduce using rule 12 (command -> array .)
    TP_ARRAY        reduce using rule 12 (command -> array .)
    $end            reduce using rule 12 (command -> array .)
    RBRACKET        reduce using rule 12 (command -> array .)
    MEASUREMENT_UNIT reduce using rule 29 (term -> array .)
    TIMES           reduce using rule 29 (term -> array .)
    DIVIDE          reduce using rule 29 (term -> array .)
    PLUS            reduce using rule 29 (term -> array .)
    MINUS           reduce using rule 29 (term -> array .)
    AND             reduce using rule 29 (term -> array .)
    OR              reduce using rule 29 (term -> array .)
    LESS_EQUAL      reduce using rule 29 (term -> array .)
    GREAT_EQUAL     reduce using rule 29 (term -> array .)
    NOT_EQUAL       reduce using rule 29 (term -> array .)
    EQUAL           reduce using rule 29 (term -> array .)

  ! IDENTIFIER      [ reduce using rule 29 (term -> array .) ]
  ! LSQUARE_BRACKET [ reduce using rule 29 (term -> array .) ]
  ! INTEGER         [ reduce using rule 29 (term -> array .) ]
  ! FLOAT           [ reduce using rule 29 (term -> array .) ]
  ! LPAREN          [ reduce using rule 29 (term -> array .) ]
  ! BOOL            [ reduce using rule 29 (term -> array .) ]
  ! LOAD            [ reduce using rule 29 (term -> array .) ]
  ! IF              [ reduce using rule 29 (term -> array .) ]
  ! WHILE           [ reduce using rule 29 (term -> array .) ]
  ! TP_OBJECT       [ reduce using rule 29 (term -> array .) ]
  ! TP_INTEGER      [ reduce using rule 29 (term -> array .) ]
  ! TP_FLOAT        [ reduce using rule 29 (term -> array .) ]
  ! TP_BOOL         [ reduce using rule 29 (term -> array .) ]
  ! TP_ARRAY        [ reduce using rule 29 (term -> array .) ]
